<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/item_layout"
    android:paddingTop="@dimen/item_layout">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_container"
        android:layout_width="@dimen/iv_width"
        android:layout_height="@dimen/iv_height"
        app:cardCornerRadius="@dimen/iv_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/preview_for_videos"
            android:scaleType="centerCrop"
            android:src="@drawable/img" />

        <FrameLayout
            android:id="@+id/black_bar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:background="@color/black_transparent"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/tv_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="54dp"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/playlist"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/fjallaone_regular"
        android:text="@string/emotional"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/image_container"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_time_or_videos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/_32_video_series"
        android:textColor="@color/almost_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>