<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:src="@color/text_black"
                android:id="@+id/exo_player"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/exoplayer"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_video_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/fjallaone_regular"
                android:paddingHorizontal="@dimen/page_padding"
                android:textAlignment="textStart"
                android:textColor="@color/text_black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/exo_player"
                tools:text="@string/how_displacement" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/page_padding"
                android:layout_marginTop="@dimen/page_padding"
                android:backgroundTint="@color/design_default_color_on_primary"
                android:drawableEnd="@drawable/ic_download"
                android:fontFamily="@font/notosans_regular"
                android:insetTop="@dimen/inset_0"
                android:insetBottom="@dimen/inset_0"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/you_tube_red"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_video_name"
                app:strokeColor="@color/you_tube_red"
                app:strokeWidth="1dp"
                tools:ignore="TextSizeCheck,TextContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/page_padding"
                android:fontFamily="@font/notosans_regular"
                android:paddingHorizontal="@dimen/page_padding"
                android:textColor="@color/text_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_download"
                app:layout_constraintVertical_bias="0"
                tools:ignore="VisualLintLongText"
                tools:text="@string/refuge" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>